tests/errors/compiler/redefinition_of_main/2_main.c
int main ()
{
	int a = 1;
	int i;
	return 0;
}

int main ()
{
	return 0;
}
